added bgr for footer

--- a/src/css/base/reset.css
+++ b/src/css/base/reset.css
@@ -34,3 +34,13 @@ img {
 button {
   cursor: pointer;
 }
+
+
+.list {
+  list-style-type: none;
+}
+
+.link {
+  text-decoration: none;
+  font-style: normal;
+}
