--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -35,7 +35,7 @@
         <input
           type="text"
           name="email"
-          class="footer-input footer-email"
+          class="footer-input footer-email error"
           placeholder="clients@gmail.com"
           required
         />
@@ -62,14 +62,14 @@
         <li>
           <a
             href="email:lloydjefferson@gmail.com"
-            class="footer-contact footer-email-contact"
+            class="footer-contact footer-email-contact link"
             >lloydjefferson@gmail.com</a
           >
         </li>
         <li>
           <a
             href="tel:+3801111111111"
-            class="footer-contact footer-phone-contact"
+            class="footer-contact footer-phone-contact link"
             >+380 11 1111 11 11</a
           >
         </li>
