--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -1,5 +1,5 @@
 .footer-section {
-  padding-top: 64px;
+  padding-top: 96px;
   padding-bottom: 32px;
 }
 
@@ -64,7 +64,7 @@
   outline: none;
   border-bottom: 1px solid rgba(250, 250, 250, 0.2);
   background-color: transparent;
-  transition: border-color 0.5s;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-input:hover,
@@ -141,11 +141,11 @@
   font-size: 16px;
   letter-spacing: -0.02em;
   color: var(--main-text);
-  transition: background-color 0.5s;
+  transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.footer-buuton:hover {
-  background-color: var(--button-text-hover);
+.footer-button:hover {
+  background-color: var(--button-hover);
 }
 
 .footer-address {
@@ -166,6 +166,7 @@
   font-size: 14px;
   letter-spacing: -0.02em;
   color: var(--main-text);
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .footer-contact:hover {
@@ -184,13 +185,23 @@
   cursor: not-allowed;
 }
 
+.footer-button:disabled:hover {
+  background-color: var(--cards);
+}
+
 @media screen and (min-width: 768px) {
   .footer-section {
-    padding-top: 88px;
+    padding-top: 176px;
     padding-bottom: 169px;
   }
 
   .footer-container {
+    /* background-image: url('/img/footer/bgr-tablet@1x.webp'); */
+    background-image: url('/img/covers/cover-tablet@1x.webp');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    backdrop-filter: blur(100px);
+    background-size: 186px 636px;
     gap: 18px;
   }
 
@@ -250,13 +261,28 @@
   }
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .footer-container {
+    background-image: url('/img/covers/cover-tablet@2x.webp');
+    /* background-image: url('/img/footer/bgr-tablet@2x.webp'); */
+  }
+}
+
 @media screen and (min-width: 1440px) {
   .footer-section {
-    padding-top: 80px;
+    padding-top: 244px;
   }
 
   .footer-container {
-    padding-left: 164px;
+    /* background-image: url('/img/footer/bgr-desktop@1x.webp'); */
+    background-image: url('/img/covers/cover-desktopt@1x.webp');
+    background-repeat: no-repeat;
+    background-position: bottom right;
+    background-size: 400px 636px;
+
+    padding-left: 196px;
   }
 
   .footer-email-wrapper {
@@ -265,5 +291,14 @@
   .footer-comment-wrapper {
     width: 390px;
     margin-right: 54px;
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (min-width: 1440px),
+  screen and (min-resolution: 2dppx) and (min-width: 1440px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 1440px) {
+  .footer-container {
+    /* background-image: url('/img/footer/bgr-desktop@2x.webp'); */
+    background-image: url('/img/covers/cover-desktopt@2x.webp');
   }
 }
