--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -31,30 +31,30 @@
     </div>
 
     <form class="footer-form">
-      <div class="footer-email-wrapper">
+      <div class="footer-email-wrapper js-custom-input-container">
         <input
           type="text"
           name="email"
-          class="footer-input footer-email error"
+          class="footer-input footer-email js-custom-input"
           placeholder="clients@gmail.com"
           required
         />
         <span class="footer-email-error">Invalid email, try again</span>
-        <span class="footer-email-success">Succes!</span>
+        <span class="footer-email-success">Succes!</span>     
       </div>
 
-      <div class="footer-comment-wrapper">
+      <div class="footer-comment-wrapper js-custom-input-container">
         <input
           type="text"
           name="comment"
-          class="footer-input footer-comment"
+          class="footer-input footer-comment js-custom-input"
           placeholder="comments"
           required
         />
-        <span class="footer-comment-error">Invalid comment, try again</span>
+        <span class="footer-comment-error">Invalid comment, try again</span>    
       </div>
 
-      <button class="footer-button" type="submit">Send</button>
+      <button class="footer-button" type="submit">Send</button>      
     </form>
 
     <address>
