--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,6 +37,7 @@
           name="email"
           class="footer-input footer-email js-custom-input"
           placeholder="clients@gmail.com"
+          data-original-text=""
           required
         />
         <span class="footer-email-error">Invalid email, try again</span>
@@ -49,6 +50,7 @@
           name="comment"
           class="footer-input footer-comment js-custom-input"
           placeholder="comments"
+          data-original-text=""
           required
         />
         <span class="footer-comment-error">Invalid comment, try again</span>    
