--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -37,11 +37,11 @@
           name="email"
           class="footer-input footer-email js-custom-input"
           placeholder="clients@gmail.com"
-          data-original-text=""
+          data-original=""
           required
         />
         <span class="footer-email-error">Invalid email, try again</span>
-        <span class="footer-email-success">Succes!</span>     
+        <span class="footer-email-success">Succes!</span>
       </div>
 
       <div class="footer-comment-wrapper js-custom-input-container">
@@ -50,13 +50,13 @@
           name="comment"
           class="footer-input footer-comment js-custom-input"
           placeholder="comments"
-          data-original-text=""
+          data-original=""
           required
         />
-        <span class="footer-comment-error">Invalid comment, try again</span>    
+        <span class="footer-comment-error">Invalid comment, try again</span>
       </div>
 
-      <button class="footer-button" type="submit">Send</button>      
+      <button class="footer-button" type="submit">Send</button>
     </form>
 
     <address>
