--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="footer-section">
+<footer class="footer-section" id="id-order">
   <div class="container footer-container">
     <div class="footer-logo-container">
       <a class="footer-logo" href="./index.html">
