--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -64,6 +64,9 @@
   outline: none;
   border-bottom: 1px solid rgba(250, 250, 250, 0.2);
   background-color: transparent;
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
   transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
