added header and mobile-menu

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -11,16 +11,15 @@
 @import url('./base/container.css');
 @import url('./base/section.css');
 
-/* @import url('./layout/header.css');
+@import url('./layout/header.css');
 @import url('./layout/mobile-menu.css');
-@import url('./layout/hero.css');
-@import url('./layout/about-me.css');
+/* @import url('./layout/hero.css'); */
+/* @import url('./layout/about-me.css'); */
 
-@import url('./layout/benefits.css');
-@import url('./layout/projects.css');
-@import url('./layout/faq.css');
-@import url('./layout/covers.css');
-@import url('./layout/reviews.css'); */
+/* @import url('./layout/benefits.css'); */
+/* @import url('./layout/projects.css'); */
+/* @import url('./layout/faq.css'); */
+/* @import url('./layout/covers.css'); */
+/* @import url('./layout/reviews.css'); */
 @import url('./layout/footer.css');
 @import url('./layout/modal-window.css');
-
