added hero section

--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -13,7 +13,7 @@
 
 @import url('./layout/header.css');
 @import url('./layout/mobile-menu.css');
-/* @import url('./layout/hero.css'); */
+@import url('./layout/hero.css');
 /* @import url('./layout/about-me.css'); */
 
 /* @import url('./layout/benefits.css'); */
