--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -14,7 +14,8 @@
 @import url('./layout/header.css');
 @import url('./layout/mobile-menu.css');
 @import url('./layout/hero.css');
-/* @import url('./layout/about-me.css'); */
+@import url('./layout/about-me.css');
+@import url('./layout/about-accordion.css');
 
 /* @import url('./layout/benefits.css'); */
 /* @import url('./layout/projects.css'); */
