--- a/src/css/layout/covers.css
+++ b/src/css/layout/covers.css
@@ -1,8 +1,121 @@
-@media screen and (min-width: 375px) {
+.covers-section {
+  max-width: 375px;
+  height: 508px;
+  background-image: url('/img/covers/cover-mobile@1x.webp');
+  background-color: var(--background);
+  background-position: center;
+  background-repeat: no-repeat;
+  background-size: cover;
+  margin: 0 auto;
+}
+
+.covers-section .container {
+  padding: 0;
+}
+
+.covers-marquee {
+  position: relative;
+  width: 100%;
+  height: 100vh;
+  overflow: hidden;
+}
+
+.cover-marquee-inner {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: space-between;
+  transform: rotate(16deg);
+}
+
+.cover-marquee-line {
+  display: flex;
+  flex-wrap: nowrap;
+  column-gap: 20px;
+  align-items: center;
+  width: 900%;
+  transform: rotate(16deg);
+}
+
+.cover-marquee-img {
+  max-height: 314px;
+  max-width: auto;
+  margin: 0;
+  animation-name: marquee;
+  animation-duration: 15s;
+  animation-timing-function: ease-in-out;
+  animation-iteration-count: infinite;
+}
+
+@keyframes marquee {
+  from {
+    transform: translateX(-20%);
+  }
+
+  to {
+    transform: translateX(-180%);
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 375px),
+  screen and (min-resolution: 2dppx) and (max-width: 375px),
+  screen and (min-device-pixel-ratio: 2) and (max-width: 375px) {
+  .covers-section {
+    background-image: url('/img/covers/cover-mobile@2x.webp');
+  }
 }
 
 @media screen and (min-width: 768px) {
+  .covers-section {
+    max-width: 768px;
+    background-image: url('/img/covers/cover-tablet@1x.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 960px;
+  }
+
+  .cover-marquee {
+    position: relative;
+    width: 100%;
+    height: 100vh;
+    overflow: hidden;
+  }
+
+  .cover-marquee-img {
+    max-height: 314px;
+    max-width: auto;
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 767px),
+  screen and (min-resolution: 2dppx) and (max-width: 767px),
+  screen and (min-device-pixel-ratio: 2) and (max-width: 767px) {
+  .section-about {
+    background-image: url('/img/covers/cover-tablet@2x.webp');
+  }
 }
 
 @media screen and (min-width: 1440px) {
+  .covers-section {
+    max-width: 1440px;
+    background-image: url('/img/covers/cover-desktop@1x.webp');
+    background-position: center;
+    background-repeat: no-repeat;
+    background-size: cover;
+    height: 960px;
+  }
+}
+
+@media screen and (min-resolution: 192dpi) and (max-width: 1440px),
+  screen and (min-resolution: 2dppx) and (max-width: 1440px),
+  screen and (min-device-pixel-ratio: 2) and (max-width: 1440px) {
+  .covers-section {
+    background-image: url('/img/covers/cover-desktop@2x.webp');
+  }
 }
