--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -20,7 +20,7 @@
 /* @import url('./layout/benefits.css'); */
 @import url('./layout/projects.css');
 @import url('./layout/faq.css');
-/* @import url('./layout/covers.css'); */
+@import url('./layout/covers.css');
 /* @import url('./layout/reviews.css'); */
 @import url('./layout/footer.css');
 @import url('./layout/modal-window.css');
