--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -21,6 +21,6 @@
 @import url('./layout/projects.css');
 @import url('./layout/faq.css');
 @import url('./layout/covers.css');
-/* @import url('./layout/reviews.css'); */
+@import url('./layout/reviews.css');
 @import url('./layout/footer.css');
 @import url('./layout/modal-window.css');
