--- a/src/css/layout/about-me.css
+++ b/src/css/layout/about-me.css
@@ -19,6 +19,8 @@
   padding-right: 32px;
   padding-top: 32px;
   height: 500px;
+  background-color: var(--cards);
+  border-radius: 24px;
 }
 
 .about-text {
