--- a/src/css/styles.css
+++ b/src/css/styles.css
@@ -16,8 +16,7 @@
 @import url('./layout/hero.css');
 @import url('./layout/about-me.css');
 @import url('./layout/about-accordion.css');
-
-/* @import url('./layout/benefits.css'); */
+@import url('./layout/benefits.css');
 @import url('./layout/projects.css');
 @import url('./layout/faq.css');
 @import url('./layout/covers.css');
