--- a/src/css/utils/variables.css
+++ b/src/css/utils/variables.css
@@ -6,6 +6,11 @@
   --button-hover: #e0373f;
   --main-text: #fff;
   --success: #3cbc81;
-  --error: #e74a3b;  
+  --error: #e74a3b;
   --defaut-border: rgba(250, 250, 250, 0.2);
+
+  --transparent-text-color: rgba(250, 250, 250, 0.4);
+  --transparent-elements-color: rgba(250, 250, 250, 0.2);
+  --transparent-description-color: rgba(250, 250, 250, 0.6);
+  --border-transparent-color: rgba(28, 29, 32, 0.2);
 }
