--- a/src/partials/faq-accordion.html
+++ b/src/partials/faq-accordion.html
@@ -9,7 +9,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -33,7 +33,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -58,7 +58,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -82,7 +82,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -106,7 +106,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -132,7 +132,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
