--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -11,7 +11,7 @@
           class="custom-icon-prev reviews-icon-prev"
           aria-label="Arrow icon left"
         >
-          <use href="/img/icons/symbols.svg#icon-arrow-left"></use>
+          <use href="./img/icons/symbols.svg#icon-arrow-left"></use>
         </svg>
       </button>
       <button class="custom-btn-next reviews-btn-next">
@@ -19,7 +19,7 @@
           class="custom-icon-next reviews-icon-next"
           aria-label="Arrow icon right"
         >
-          <use href="/img/icons/symbols.svg#icon-arrow-right"></use>
+          <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
         </svg>
       </button>
     </dim>
