--- a/src/partials/about-me-accordion.html
+++ b/src/partials/about-me-accordion.html
@@ -9,7 +9,7 @@
           width="18"
           height="18"
         >
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -45,7 +45,7 @@
       Role
       <button type="button" class="about-acc-button">
         <svg class="about-acc-icon" aria-label="Arrow icon">
-          <use href="/img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
@@ -69,7 +69,7 @@
           width="28"
           height="28"
         >
-          <use href="../img/icons/symbols.svg#icon-dropdown"></use>
+          <use href="./img/icons/symbols.svg#icon-dropdown"></use>
         </svg>
       </button>
     </h3>
