--- a/src/partials/about-me-skills.html
+++ b/src/partials/about-me-skills.html
@@ -31,7 +31,7 @@
       width="28"
       height="28"
     >
-      <use href="/img/icons/symbols.svg#icon-arrow-right"></use>
+      <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
     </svg>
   </button>
 </div>
