--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -10,7 +10,7 @@
           class="custom-icon-prev projects-icon-prev"
           aria-label="Arrow icon left"
         >
-          <use href="/img/icons/symbols.svg#icon-arrow-left"></use>
+          <use href="./img/icons/symbols.svg#icon-arrow-left"></use>
         </svg>
       </button>
       <button class="custom-btn-next projects-btn-next">
@@ -18,7 +18,7 @@
           class="custom-icon-next projects-icon-next"
           aria-label="Arrow icon right"
         >
-          <use href="/img/icons/symbols.svg#icon-arrow-right"></use>
+          <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
         </svg>
       </button>
     </dim>
