--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -1,4 +1,4 @@
-<section class="benefits-section">
+<section class="benefits-section" id="id-benefits">
   <div class="container container-benefits">
     <h2 class="benefits-title">Benefits of working with me</h2>
     <div class="wrap">
