--- a/src/partials/mobile-menu.html
+++ b/src/partials/mobile-menu.html
@@ -18,11 +18,11 @@
         </li>
 
         <li>
-          <a href="#" class="mobile-menu-item-link">Benefits</a>
+          <a href="#id-benefits" class="mobile-menu-item-link">Benefits</a>
         </li>
 
         <li>
-          <a href="#" class="mobile-menu-item-link">Projects</a>
+          <a href="#id-projects" class="mobile-menu-item-link">Projects</a>
         </li>
 
         <li>
