--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -1,10 +1,10 @@
 <section class="projects-section" id="id-projects">
   <div class="container projects-container">
     <h2 class="projects-title">Projects</h2>
-    <dim class="projects-swiper-container swiper">
+    <div class="projects-swiper-container swiper">
       <ul class="projects-list swiper-wrapper"></ul>
-    </dim>
-    <dim class="custom-container-buttons projects-buttons">
+    </div>
+    <div class="custom-container-buttons projects-buttons">
       <button class="custom-btn-prev projects-btn-prev">
         <svg
           class="custom-icon-prev projects-icon-prev"
@@ -21,6 +21,6 @@
           <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
         </svg>
       </button>
-    </dim>
+    </div>
   </div>
 </section>
