--- a/src/partials/reviews.html
+++ b/src/partials/reviews.html
@@ -5,7 +5,7 @@
       <ul class="reviews-list swiper-wrapper"></ul>
     </div>
 
-    <dim class="custom-container-buttons reviews-buttons">
+    <div class="custom-container-buttons reviews-buttons">
       <button class="custom-btn-prev reviews-btn-prev">
         <svg
           class="custom-icon-prev reviews-icon-prev"
@@ -22,6 +22,6 @@
           <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
         </svg>
       </button>
-    </dim>
+    </div>
   </div>
 </section>
