--- a/src/partials/about-me-skills.html
+++ b/src/partials/about-me-skills.html
@@ -1,5 +1,5 @@
 <div class="about-swiper-container">
-  <dim class="about-skills-container swiper">
+  <div class="about-skills-container swiper">
     <ul class="about-skills-list swiper-wrapper">
       <li class="about-skills-item active swiper-slide">
         <span>HTML/CSS</span>
@@ -23,7 +23,7 @@
         <span>Soft skills</span>
       </li>
     </ul>
-  </dim>
+  </div>
   <button class="about-arrow-btn-next">
     <svg
       class="about-arrow-icon"
