--- a/src/css/layout/benefits.css
+++ b/src/css/layout/benefits.css
@@ -5,8 +5,8 @@
 .benefits {
   display: flex;
   flex-direction: column;
-  justify-content: left;
-  align-items: left;
+  justify-content: flex-start;
+  align-items: flex-start;
   min-width: 320px;
 }
 
