--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -146,7 +146,7 @@
   border: none;
   outline: none;
   margin: 0;
-  font-display: flex;
+  display: flex;
   justify-content: center;
   align-items: center;
   flex-shrink: 0;
