--- a/src/css/base/custom-buttons.css
+++ b/src/css/base/custom-buttons.css
@@ -11,6 +11,7 @@
   align-items: center;
   border: 1px solid rgba(250, 250, 250, 0.5);
   cursor: pointer;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .custom-icon-next,
@@ -25,6 +26,17 @@
 .custom-btn-prev:disabled {
   border: 1px solid rgba(250, 250, 250, 0.2);
   cursor: not-allowed;
+}
+
+.custom-btn-next:disabled:hover,
+.custom-btn-prev:disabled:hover {
+  border: 1px solid rgba(250, 250, 250, 0.2);
+  cursor: not-allowed;
+}
+
+.custom-btn-next:hover,
+.custom-btn-prev:hover {
+  border: 1px solid var(--main-text);
 }
 
 .custom-btn-next:disabled .custom-icon-next,
