--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -4,6 +4,7 @@
 }
 
 .footer-container {
+  position: relative;
   display: flex;
   flex-direction: column;
   gap: 63px;
@@ -210,6 +211,32 @@
   background-color: var(--cards);
 }
 
+.footer-scroll-up {
+  position: absolute;
+  bottom: 50px;
+  left: 10px;
+  padding: 10px 0;
+  width: 100px;
+  height: 39px;
+  display: block;
+  border: none;
+  outline: none;
+  background-color: transparent;
+  font-family: 'InterTight', sans-serif;
+  font-weight: 500;
+  font-size: 16px;
+  letter-spacing: -0.02em;
+  text-decoration: underline;
+  text-decoration-skip-ink: none;
+  color: var(--main-text);
+  transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+  z-index: 400;
+}
+
+.footer-scroll-up:hover {
+  color: var(--button-text);
+}
+
 @media screen and (min-width: 768px) {
   .footer-section {
     padding-top: 176px;
@@ -280,6 +307,11 @@
   .footer-phone-contact {
     width: 171px;
   }
+
+  .footer-scroll-up {
+    left: 620px;
+    bottom: 10px;
+  }
 }
 
 @media screen and (min-resolution: 192dpi) and (min-width: 768px),
@@ -312,6 +344,11 @@
   .footer-comment-wrapper {
     width: 390px;
     margin-right: 54px;
+  }
+
+  .footer-scroll-up {
+    left: 1130px;
+    bottom: 20px;
   }
 }
 
