--- a/src/css/layout/projects.css
+++ b/src/css/layout/projects.css
@@ -105,7 +105,7 @@
 .projects-img-wrapper {
   width: 100%;
   height: 395px;
-  background-color: var(--button-text);
+  background-color: var(--cards);
   display: flex;
   justify-content: center;
   align-items: center;
