refactoring, fixed benefits, accordions and swipers

--- a/src/partials/benefits.html
+++ b/src/partials/benefits.html
@@ -52,7 +52,9 @@
           </p>
         </li>
       </ul>
-      <a href="#footer" class="order-project">Order the project</a>
+      <a href="#id-order" class="order-project js-project-order"
+        >Order the project</a
+      >
     </div>
   </div>
 </section>
