--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -77,5 +77,8 @@
         </li>
       </ul>
     </address>
+    <button type="button" class="footer-scroll-up js-footer-scroll-up">
+      Scroll up
+    </button>
   </div>
 </footer>
