--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,4 @@
-<section class="hero-section">
+<section class="hero-section" id="id-hero">
   <div class="container hero-container">
     <h1 class="hero-title">
       Hello. I&#39;m Fullstack developer Lloyd Jefferson.
