buttons, arrows links

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -74,7 +74,7 @@
 .footer-input:hover,
 .footer-input:active,
 .footer-input:focus {
-  border-color: var(--main-text);
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 .footer-input::placeholder {
@@ -192,7 +192,7 @@
 }
 
 .footer-contact:hover {
-  border-color: var(--main-text);
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 .footer-email-contact {
