--- a/src/css/layout/about-accordion.css
+++ b/src/css/layout/about-accordion.css
@@ -36,6 +36,11 @@
   outline: none;
   background-color: transparent;
   margin: 0;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.about-acc-button:hover {
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 .about-acc-icon {
@@ -52,6 +57,7 @@
 }
 
 .about-acc-text {
+  width: 90%;
   display: flex;
   flex-direction: column;
   gap: 32px;
