--- a/src/css/layout/about-me.css
+++ b/src/css/layout/about-me.css
@@ -72,6 +72,11 @@
   letter-spacing: -0.02em;
   color: var(--main-text);
   background-color: transparent;
+  transition: background-color 1s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.about-skills-list .about-skills-item:hover {
+  background-color: var(--button-hover);
 }
 
 .about-skills-item.active {
@@ -105,9 +110,16 @@
 .about-arrow-icon {
   width: 100%;
   height: 100%;
+  fill: rgba(250, 250, 250, 0.6);
+  stroke: rgba(250, 250, 250, 0.6);
+  z-index: 900;
+  transition: fiil 0.5s cubic-bezier(0.4, 0, 0.2, 1),
+    stroke 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.about-arrow-btn-next:hover .about-arrow-icon {
   fill: var(--main-text);
   stroke: var(--main-text);
-  z-index: 900;
 }
 
 .swiper-button-next::after {
@@ -144,6 +156,7 @@
     font-size: 20px;
     letter-spacing: -0.02em;
     color: var(--main-text);
+    transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
   }
 
   .about-skills-container {
