--- a/src/css/layout/benefits.css
+++ b/src/css/layout/benefits.css
@@ -83,7 +83,7 @@
 }
 
 .order-project:hover {
-  border-color: var(--main-text);
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 @media screen and (min-width: 768px) {
