--- a/src/css/layout/faq.css
+++ b/src/css/layout/faq.css
@@ -16,6 +16,7 @@
   letter-spacing: -0.02em;
   color: rgba(250, 250, 250, 0.4);
 }
+
 .faq-acc-container {
   width: 100%;
   display: flex;
@@ -52,16 +53,23 @@
   outline: none;
   background-color: transparent;
   margin: 0;
+  flex-shrink: 0;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.faq-acc-item .faq-acc-button:hover {
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 .faq-acc-icon {
   width: 20px;
   height: 20px;
   stroke: var(--main-text);
-  transition: transform 0.3s ease;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .faq-acc-panel {
+  width: 90%;
   display: flex;
   flex-direction: column;
   gap: 20px;
@@ -117,6 +125,10 @@
     flex-direction: row;
     flex-wrap: wrap;
     gap: 0;
+  }
+
+  .faq-acc-item .faq-acc-header {
+    padding-right: 24px;
   }
 
   .faq-acc-item {
