--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -40,6 +40,7 @@
 }
 
 .hero-social-list-item {
+  cursor: pointer;
   border: 1px solid rgba(250, 250, 250, 0.2);
   border-radius: 60px;
   padding: 10px 12px;
@@ -48,6 +49,13 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.hero-social-list-item:hover,
+.hero-social-list-item:hover {
+  cursor: pointer;
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 .hero-social-list-link {
@@ -66,13 +74,20 @@
   display: flex;
   justify-content: center;
   align-items: center;
+  transition: border-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .hero-email-link {
-  font-family: var(--font-family);
+  font-family: 'InterTight', sans-serif;
   font-weight: 500;
   font-size: 14px;
   letter-spacing: -0.02em;
+}
+
+.hero-address:hover,
+.hero-address:hover {
+  cursor: pointer;
+  border-color: rgba(250, 250, 250, 0.6);
 }
 
 @media screen and (min-width: 768px) {
@@ -124,5 +139,13 @@
   .hero-title {
     width: 1084px;
     margin: 0 auto;
+  }
+}
+
+@media screen and (min-resolution: 192dpi),
+  screen and (min-resolution: 2dppx),
+  screen and (min-device-pixel-ratio: 2) {
+  .hero-section {
+    background-image: url('/img/hero/bgr@2x.webp');
   }
 }
