--- a/src/partials/about-me-image.html
+++ b/src/partials/about-me-image.html
@@ -25,6 +25,7 @@
       class="about-image"
       src="./img/about-me/about-mobile@1x.webp"
       alt="photo of Jefferson"
+      loading="lazy"
     />
   </picture>
 </div>
