--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -21,6 +21,7 @@
             class="footer-image"
             src="./img/footer/photo-mobile@1x.webp"
             alt="photo of Jefferson"
+            loading="lazy"
           />
         </picture>
       </a>
