--- a/src/partials/header.html
+++ b/src/partials/header.html
@@ -10,6 +10,7 @@
           class="header-logo-image"
           src="./img/header/photo@1x.webp"
           alt="Photo of Jefferson"
+          loading="lazy"
           width="80"
           height="80"
         />
