--- a/src/css/base/custom-buttons.css
+++ b/src/css/base/custom-buttons.css
@@ -18,7 +18,7 @@
 .custom-icon-prev {
   width: 24px;
   height: 24px;
-  fill: var(--main-text);
+  fill: none;
   stroke: var(--main-text);
 }
 
@@ -41,7 +41,7 @@
 
 .custom-btn-next:disabled .custom-icon-next,
 .custom-btn-prev:disabled .custom-icon-prev {
-  fill: rgba(250, 250, 250, 0.2);
+  fill: none;
   stroke: rgba(250, 250, 250, 0.2);
 }
 
