--- a/src/partials/projects.html
+++ b/src/partials/projects.html
@@ -7,7 +7,7 @@
     <div class="custom-container-buttons projects-buttons">
       <button class="custom-btn-prev projects-btn-prev">
         <svg
-          class="custom-icon-prev projects-icon-prev"
+          class="custom-icon-prev projects-icon"
           aria-label="Arrow icon left"
         >
           <use href="./img/icons/symbols.svg#icon-arrow-left"></use>
@@ -15,7 +15,7 @@
       </button>
       <button class="custom-btn-next projects-btn-next">
         <svg
-          class="custom-icon-next projects-icon-next"
+          class="custom-icon-next projects-icon"
           aria-label="Arrow icon right"
         >
           <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
