--- a/src/partials/about-me-accordion.html
+++ b/src/partials/about-me-accordion.html
@@ -77,10 +77,10 @@
     <div class="about-acc-panel ac-panel">
       <ul class="about-acc-list">
         <li class="about-acc-list-item">
-          2018 - 2019 / Frontend Development Diploma, GoIT IT School, New York
+          2018 - 2019 / Frontend Development Diploma, GoIT IT</br> School, New York
         </li>
         <li class="about-acc-list-item">
-          2019 - 2020 / Advanced Web Development Certificate, GoIT IT School,
+          2019 - 2020 / Advanced Web Development Certificate, GoIT IT</br> School,
           New York
         </li>
         <li class="about-acc-list-item">
