--- a/src/partials/about-me-skills.html
+++ b/src/partials/about-me-skills.html
@@ -31,7 +31,9 @@
       width="28"
       height="28"
     >
-      <use href="./img/icons/symbols.svg#icon-arrow-right"></use>
+      <!-- <use href="./img/icons/symbols.svg#icon-arrow-right"></use> -->
+      icon-icon-arrow-right
+      <use href="./img/icons/symbols.svg#icon-icon-arrow-right"></use>
     </svg>
   </button>
 </div>
