--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -22,7 +22,7 @@
   font-family: 'InterTight', sans-serif;
   font-size: 50px;
   line-height: 100%;
-  letter-spacing: -0.03em;
+  letter-spacing: -1.5px;
   text-transform: uppercase;
 }
 
@@ -55,7 +55,7 @@
 .hero-social-list-item:hover,
 .hero-social-list-item:hover {
   cursor: pointer;
-  border-color: rgba(250, 250, 250, 0.6);
+  border-color: #fafafa;
 }
 
 .hero-social-list-link {
@@ -63,7 +63,7 @@
   font-weight: 500;
   font-size: 14px;
   text-transform: uppercase;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.28px;
 }
 
 .hero-address {
@@ -81,13 +81,13 @@
   font-family: 'InterTight', sans-serif;
   font-weight: 500;
   font-size: 14px;
-  letter-spacing: -0.02em;
+  letter-spacing: -0.28px;
 }
 
 .hero-address:hover,
 .hero-address:hover {
   cursor: pointer;
-  border-color: rgba(250, 250, 250, 0.6);
+  border-color: #fafafa;
 }
 
 @media screen and (min-width: 768px) {
@@ -102,6 +102,7 @@
 
   .hero-title {
     font-size: 90px;
+    letter-spacing: -2.7px;
   }
 
   .last-line {
@@ -119,6 +120,7 @@
 
   .hero-social-list-link {
     font-size: 16px;
+    letter-spacing: -0.32px;
   }
 
   .hero-address {
@@ -128,6 +130,7 @@
 
   .hero-email-link {
     font-size: 16px;
+    letter-spacing: -0.32px;
   }
 }
 
@@ -137,7 +140,8 @@
   }
 
   .hero-title {
-    width: 1084px;
+    width: 1090px;
+
     margin: 0 auto;
   }
 }
