--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,7 +1,8 @@
 <section class="hero-section" id="id-hero">
   <div class="container hero-container">
     <h1 class="hero-title">
-      Hello. I&#39;m Fullstack developer Lloyd Jefferson.
+      Hello. <br />
+      I&#39;m Fullstack developer Lloyd Jefferson.
     </h1>
     <div class="last-line">
       <ul class="hero-social-list list">
@@ -43,7 +44,7 @@
         </li>
       </ul>
       <address class="hero-address">
-        <a href="email:lloydjefferson@gmail.com" class="hero-email-link link"
+        <a href="mailto:lloydjefferson@gmail.com" class="hero-email-link link"
           >lloydjefferson@gmail.com</a
         >
       </address>
