--- a/src/css/layout/faq.css
+++ b/src/css/layout/faq.css
@@ -18,6 +18,7 @@
 }
 
 .faq-acc-container {
+  border-top: 1px solid rgba(250, 250, 250, 0.2);
   width: 100%;
   display: flex;
   flex-direction: column;
@@ -79,6 +80,7 @@
   font-weight: 500;
   font-size: 16px;
   line-height: 150%;
+  padding-top: 26px;
   letter-spacing: -0.02em;
   color: rgba(250, 250, 250, 0.6);
 }
@@ -117,6 +119,9 @@
     width: 40px;
     height: 40px;
   }
+  .faq-acc-item {
+    padding-top: 32px;
+  }
 }
 
 @media screen and (min-width: 1440px) {
@@ -127,11 +132,19 @@
     gap: 0;
   }
 
-  .faq-acc-item .faq-acc-header {
-    padding-right: 24px;
-  }
-
   .faq-acc-item {
     width: calc((100% - 4px) / 2);
+    padding-bottom: 42px;
+  }
+
+  .faq-acc-item:nth-child(5) {
+    border-bottom: 1px solid rgba(250, 250, 250, 0.2);
+  }
+  .faq-acc-item:nth-child(2n + 1) {
+    border-right: 1px solid rgba(250, 250, 250, 0.2);
+    padding-right: 32px;
+  }
+  .faq-acc-item:nth-child(2n) {
+    padding-left: 32px;
   }
 }
