changed background in footer

--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -318,8 +318,7 @@
   screen and (min-resolution: 2dppx) and (min-width: 768px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
   .footer-container {
-    background-image: url('/img/covers/cover-tablet@2x.webp');
-    /* background-image: url('/img/footer/bgr-tablet@2x.webp'); */
+    background-image: url('/img/footer/bgr-tablet@2x.webp');
   }
 }
 
@@ -329,8 +328,7 @@
   }
 
   .footer-container {
-    /* background-image: url('/img/footer/bgr-desktop@1x.webp'); */
-    background-image: url('/img/covers/cover-desktop@1x.webp');
+    background-image: url('/img/footer/bgr-desktop@1x.webp');
     background-repeat: no-repeat;
     background-position: bottom right;
     background-size: 400px 636px;
@@ -356,7 +354,6 @@
   screen and (min-resolution: 2dppx) and (min-width: 1440px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 1440px) {
   .footer-container {
-    /* background-image: url('/img/footer/bgr-desktop@2x.webp'); */
-    background-image: url('/img/covers/cover-desktop@2x.webp');
+    background-image: url('/img/footer/bgr-desktop@2x.webp');
   }
 }
