--- a/src/css/layout/header.css
+++ b/src/css/layout/header.css
@@ -1,6 +1,20 @@
 .header {
   background-color: transparent;
   padding-top: 32px;
+  transition: box-shadow 500ms cubic-bezier(0.4, 0, 0.2, 1),
+    padding-top 1000ms cubic-bezier(0.4, 0, 0.2, 1),
+    background-color 1000ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.onscroll {
+  box-shadow: 0px 2px 4px rgba(0, 0, 0, 0.1), 0px 2px 8px rgba(0, 0, 0, 0.08);
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(10px);
+  background-color: rgba(255, 255, 255, 0.1);
+  padding-top: 8px;
+  backdrop-filter: blur(10px);
+  -webkit-backdrop-filter: blur(8px);
+  padding-top: 8px;
 }
 
 .header-fixed {
