--- a/src/css/layout/footer.css
+++ b/src/css/layout/footer.css
@@ -226,7 +226,6 @@
   font-weight: 500;
   font-size: 16px;
   letter-spacing: -0.02em;
-  text-decoration: underline;
   text-decoration-skip-ink: none;
   color: var(--main-text);
   transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
@@ -235,6 +234,22 @@
 
 .footer-scroll-up:hover {
   color: var(--button-text);
+}
+
+.footer-scroll-up::after {
+  content: '';
+  position: absolute;
+  left: 50%;
+  transform: translateX(-50%);
+  bottom: 6px;
+  width: 60%;
+  height: 1.5px;
+  background-color: var(--main-text);
+  transition: color 0.5s cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.footer-scroll-up:hover::after {
+  background-color: var(--button-text);
 }
 
 @media screen and (min-width: 768px) {
