--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -1,7 +1,6 @@
 .hero-section {
-  width: 100%;
   height: 812px;
-  background-image: url('/img/hero/bgr@1x.webp');
+  background-image: url('/img/hero/hero-mobile.png');
   background-repeat: repeat, no-repeat;
   background-position: 0 0;
   background-size: 100% 100%;
@@ -90,10 +89,20 @@
   border-color: #fafafa;
 }
 
+
+@media screen and (min-resolution: 192dpi) and (min-width: 375px),
+  screen and (min-resolution: 2dppx) and (min-width: 375px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 375px) {
+  .hero-section {
+    background-image: url('/img/hero/hero-mobile@2x.png');
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero-section {
     height: 1024px;
     padding-top: 300px;
+    background-image: url('/img/hero/hero-tablet@1x.png');
   }
 
   .hero-container {
@@ -134,9 +143,19 @@
   }
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 767px),
+  screen and (min-resolution: 2dppx) and (min-width: 767px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 767px) {
+  .hero-section {
+    background-image: url('/img/hero/hero-tablet@2x.png');
+  }
+}
+
+
 @media screen and (min-width: 1440px) {
   .hero-section {
     height: 900px;
+    background-image: url('/img/hero/hero-desktop@1x.png');
   }
 
   .hero-title {
@@ -146,10 +165,13 @@
   }
 }
 
-@media screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx),
-  screen and (min-device-pixel-ratio: 2) {
-  .hero-section {
-    background-image: url('/img/hero/bgr@2x.webp');
+@media screen and (min-resolution: 192dpi) and (min-width: 1439px),
+  screen and (min-resolution: 2dppx) and (min-width: 1439px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 1439px) {
+  .hero-section  {
+    background-image: url('/img/hero/hero-desktop@2x.png');
   }
 }
+
+
+
