--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -1,7 +1,7 @@
 .hero-section {
   width: 100%;
   height: 812px;
-  background-image: url('/img/hero/bgr@1x.webp');
+  background-image: url('../../img//hero/bgr-mobile-1x.png');
   background-repeat: repeat, no-repeat;
   background-position: 0 0;
   background-size: 100% 100%;
@@ -90,8 +90,17 @@
   border-color: #fafafa;
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 375px),
+  screen and (min-resolution: 2dppx) and (min-width: 375px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 375px) {
+  .hero-section {
+    background-image: url('../../img/hero/bgr-mobile-2x.png');
+  }
+}
+
 @media screen and (min-width: 768px) {
   .hero-section {
+    background-image: url('../../img/hero/bgr-tablet-1x.png');
     height: 1024px;
     padding-top: 300px;
   }
@@ -134,8 +143,17 @@
   }
 }
 
+@media screen and (min-resolution: 192dpi) and (min-width: 768px),
+  screen and (min-resolution: 2dppx) and (min-width: 768px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 768px) {
+  .hero-section {
+    background-image: url('/img/hero/bgr-tablet-2x.png');
+  }
+}
+
 @media screen and (min-width: 1440px) {
   .hero-section {
+    background-image: url('/img/hero/bgr-desktop-1x.png');
     height: 900px;
   }
 
@@ -146,10 +164,10 @@
   }
 }
 
-@media screen and (min-resolution: 192dpi),
-  screen and (min-resolution: 2dppx),
-  screen and (min-device-pixel-ratio: 2) {
+@media screen and (min-resolution: 192dpi) and (min-width: 1440px),
+  screen and (min-resolution: 2dppx) and (min-width: 1440px),
+  screen and (min-device-pixel-ratio: 2) and (min-width: 1440px) {
   .hero-section {
-    background-image: url('/img/hero/bgr@2x.webp');
+    background-image: url('../../img//hero/bgr-desktop_1x.png');
   }
 }
