--- a/src/css/layout/hero.css
+++ b/src/css/layout/hero.css
@@ -1,7 +1,7 @@
 .hero-section {
   width: 100%;
   height: 812px;
-  background-image: url('../../img//hero/bgr-mobile-1x.png');
+  background-image: url('/img//hero/bgr-mobile-1x.png');
   background-repeat: repeat, no-repeat;
   background-position: 0 0;
   background-size: 100% 100%;
@@ -94,13 +94,13 @@
   screen and (min-resolution: 2dppx) and (min-width: 375px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 375px) {
   .hero-section {
-    background-image: url('../../img/hero/bgr-mobile-2x.png');
+    background-image: url('/img/hero/bgr-mobile-2x.png');
   }
 }
 
 @media screen and (min-width: 768px) {
   .hero-section {
-    background-image: url('../../img/hero/bgr-tablet-1x.png');
+    background-image: url('/img/hero/bgr-tablet-1x.png');
     height: 1024px;
     padding-top: 300px;
   }
@@ -168,6 +168,6 @@
   screen and (min-resolution: 2dppx) and (min-width: 1440px),
   screen and (min-device-pixel-ratio: 2) and (min-width: 1440px) {
   .hero-section {
-    background-image: url('../../img//hero/bgr-desktop_1x.png');
+    background-image: url('/img//hero/bgr-desktop_1x.png');
   }
 }
