--- a/src/partials/footer.html
+++ b/src/partials/footer.html
@@ -64,7 +64,7 @@
       <ul class="footer-address">
         <li>
           <a
-            href="email:lloydjefferson@gmail.com"
+            href="mailto:lloydjefferson@gmail.com"
             class="footer-contact footer-email-contact link"
             >lloydjefferson@gmail.com</a
           >
