--- a/src/partials/covers.html
+++ b/src/partials/covers.html
@@ -1,4 +1,12 @@
-<section class="covers-section">
+<section
+  class="covers-section lazy-bgr"
+  data-bgr-src-mobile1x="/img/covers/covers-mobile@1x.png"
+  data-bgr-src-mobile2x="/img/covers/covers-mobile@2x.png"
+  data-bgr-src-tablet1x="/img/covers/covers-tablet@1x.png"
+  data-bgr-src-tablet2x="/img/covers/covers-tablet@2x.png"
+  data-bgr-src-desktop1x="/img/covers/covers-desktop@1x.png"
+  data-bgr-src-desktop2x="/img/covers/covers-desktop@2x.png"
+>
   <div class="container">
     <h2 class="covers-title visually-hidden">Cover</h2>
     <div class="covers-marquee"></div>
