--- a/src/partials/hero.html
+++ b/src/partials/hero.html
@@ -1,4 +1,13 @@
-<section class="hero-section" id="id-hero">
+<section
+  class="hero-section lazy-bgr"
+  data-bgr-src-mobile1x="/img/hero/hero-mobile.png"
+  data-bgr-src-mobile2x="/img/hero/hero-mobile@2x.png"
+  data-bgr-src-tablet1x="/img/hero/hero-tablet@1x.png"
+  data-bgr-src-tablet2x="/img/hero/hero-tablet@1x.png"
+  data-bgr-src-desktop1x="/img/hero/hero-desktop@1x.png"
+  data-bgr-src-desktop2x="/img/hero/hero-desktop@2x.png"
+  id="id-hero"
+>
   <div class="container hero-container">
     <h1 class="hero-title">
       Hello. <br />
