--- a/src/css/layout/projects.css
+++ b/src/css/layout/projects.css
@@ -5,6 +5,7 @@
 .projects-swiper-container {
   width: 100%;
 }
+
 .projects-title {
   font-weight: 600;
   font-size: 16px;
@@ -50,9 +51,10 @@
 }
 
 .projects-lang-item {
-  border: 1px solid rgba(28, 29, 32, 0.4);
+  border: 1px solid rgba(28, 29, 32, 0.2);
   border-radius: 60px;
-  padding: 13px 18px;
+  padding: 18px;
+  height: 45px;
   display: flex;
   justify-content: center;
   align-items: center;
@@ -61,7 +63,7 @@
 .projects-lang-item-text {
   font-weight: 500;
   font-size: 16px;
-  letter-spacing: -0.32px;
+  letter-spacing: -0.02em;
   color: var(--background);
 }
 
@@ -86,16 +88,18 @@
   display: flex;
   justify-content: center;
   align-items: center;
-  background: #ed3b44;
+  background: var(--button-text);
   font-weight: 500;
   font-size: 16px;
   letter-spacing: -0.02em;
-  color: #fafafa;
+  color: var(--main-text);
   transition: background-color 500ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.project-link:hover {
-  background: #e0373f;
+.projects-button:hover,
+.projects-button:focus {
+  background-color: var(--button-hover);
+  cursor: pointer;
 }
 
 .projects-img-wrapper {
@@ -124,7 +128,7 @@
 
   .projects-container {
     position: relative;
-    padding-bottom: 132px;
+    padding-bottom: 96px;
   }
 
   .projects-item {
@@ -135,9 +139,7 @@
     height: 566px;
     padding: 64px;
   }
-  .projects-lang-item {
-    padding: 18px 18px;
-  }
+
   .projects-lang-item-text {
     font-weight: 500;
     font-size: 16px;
